--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(helloWorld)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(helloWorld main.cpp stb_image_write.h stb_image.h)
+add_executable(helloWorld main.cpp stb_image_write.h stb_image.h Vector.cpp Vector.h)
