--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(helloWorld)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(helloWorld main.cpp stb_image_write.h stb_image.h Vector.cpp Vector.h Ray.cpp Ray.h Sphere.cpp Sphere.h Scene.cpp Scene.h)
+add_executable(helloWorld main.cpp stb_image_write.h stb_image.h Models/Vector.cpp Models/Vector.h Models/Ray.cpp Models/Ray.h Models/Sphere.cpp Models/Sphere.h Models/Scene.cpp Models/Scene.h)
